projects/vb6parse/snapshots/tests/module/audiostation/audiostation_mod_enums_module_load.snap
---
source: projects/vb6parse/tests/module/audiostation.rs
expression: module_file
---
name: modEnums
cst:
  root:
    kind: Root
    children:
      - kind: EnumStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: EnumKeyword
            text: Enum
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: enumMidiMediaType
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: Whitespace
                text: "    "
              - kind: LeftSquareBracket
                text: "["
              - kind: Identifier
                text: Midi
              - kind: RightSquareBracket
                text: "]"
              - kind: Newline
                text: "\n"
              - kind: Whitespace
                text: "    "
              - kind: LeftSquareBracket
                text: "["
              - kind: Identifier
                text: sID
              - kind: RightSquareBracket
                text: "]"
              - kind: Newline
                text: "\n"
              - kind: Whitespace
                text: "    "
              - kind: LeftSquareBracket
                text: "["
              - kind: BeepKeyword
                text: Beep
              - kind: RightSquareBracket
                text: "]"
              - kind: Newline
                text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: EnumKeyword
            text: Enum
          - kind: Newline
            text: "\n"
