projects/vb6parse/snapshots/tests/module/audiostation/audiostation_mod_mus_player_module_load.snap
---
source: projects/vb6parse/tests/module/audiostation.rs
expression: module_file
---
name: modMusPlayer
cst:
  root:
    kind: Root
    children:
      - kind: OptionStatement
        children:
          - kind: OptionKeyword
            text: Option
          - kind: Whitespace
            text: " "
          - kind: ExplicitKeyword
            text: Explicit
          - kind: Newline
            text: "\n"
      - kind: FunctionStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: FunctionKeyword
            text: Function
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: NewPlayer
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: Identifier
                text: Filename
              - kind: Whitespace
                text: " "
              - kind: AsKeyword
                text: As
              - kind: Whitespace
                text: " "
              - kind: StringKeyword
                text: String
              - kind: RightParenthesis
                text: )
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: LongKeyword
            text: Long
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: Newline
                text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: FunctionKeyword
            text: Function
          - kind: Newline
            text: "\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: StopPlayer
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: Newline
                text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\n"
      - kind: SubStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: PausePlayer
          - kind: ParameterList
            children:
              - kind: LeftParenthesis
                text: (
              - kind: RightParenthesis
                text: )
          - kind: Newline
            text: "\n"
          - kind: StatementList
            children:
              - kind: Newline
                text: "\n"
          - kind: EndKeyword
            text: End
          - kind: Whitespace
            text: " "
          - kind: SubKeyword
            text: Sub
          - kind: Newline
            text: "\n"
